一旦コミット

--- a/src/layouts/components/BlogCard.astro
+++ b/src/layouts/components/BlogCard.astro
@@ -1,7 +1,7 @@
 ---
 import config from "@/config/config.json";
-import dateFormat from "@/lib/utils/dateFormat";
-import { humanize, plainify, slugify } from "@/lib/utils/textConverter";
+import dateFormat from "@/libs/utils/dateFormat";
+import { humanize, plainify, slugify } from "@/libs/utils/textConverter";
 import { FaRegFolder, FaRegUserCircle } from "react-icons/fa";
 import ImageMod from "./ImageMod.astro";
 
