--- a/src/pages/[regular].astro
+++ b/src/pages/[regular].astro
@@ -1,6 +1,6 @@
 ---
 import Base from "@/layouts/Base.astro";
-import { getSinglePage } from "@/lib/contentParser.astro";
+import { getSinglePage } from "@/libs/contentParser.astro";
 import PageHeader from "@/partials/PageHeader.astro";
 
 // get static paths for all pages
