--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -2,7 +2,7 @@
 import TwSizeIndicator from "@/components/TwSizeIndicator.astro";
 import config from "@/config/config.json";
 import theme from "@/config/theme.json";
-import { plainify } from "@/lib/utils/textConverter";
+import { plainify } from "@/libs/utils/textConverter";
 import Footer from "@/partials/Footer.astro";
 import Header from "@/partials/Header.astro";
 import "@/styles/main.scss";
@@ -42,7 +42,7 @@ const { title, meta_title, description, image, noindex, canonical } =
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="jp">
   <head>
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
