--- a/src/layouts/PostSingle.astro
+++ b/src/layouts/PostSingle.astro
@@ -2,10 +2,10 @@
 import BlogCard from "@/components/BlogCard.astro";
 import Share from "@/components/Share.astro";
 import Disqus from "@/helpers/Disqus";
-import { getSinglePage } from "@/lib/contentParser.astro";
-import dateFormat from "@/lib/utils/dateFormat";
-import similarItems from "@/lib/utils/similarItems";
-import { humanize, markdownify, slugify } from "@/lib/utils/textConverter";
+import { getSinglePage } from "@/libs/contentParser.astro";
+import dateFormat from "@/libs/utils/dateFormat";
+import similarItems from "@/libs/utils/similarItems";
+import { humanize, markdownify, slugify } from "@/libs/utils/textConverter";
 import { FaRegClock, FaRegFolder, FaRegUserCircle } from "react-icons/fa";
 import ImageMod from "./components/ImageMod.astro";
 
