--- a/src/libs/taxonomyParser.astro
+++ b/src/libs/taxonomyParser.astro
@@ -1,6 +1,6 @@
 ---
-import { getSinglePage } from "@/lib/contentParser.astro";
-import { slugify } from "@/lib/utils/textConverter";
+import { getSinglePage } from "@/libs/contentParser.astro";
+import { slugify } from "@/libs/utils/textConverter";
 
 // get taxonomy from frontmatter
 export const getTaxonomy = async (collection: any, name: string) => {
