--- a/src/pages/blog/[single].astro
+++ b/src/pages/blog/[single].astro
@@ -1,7 +1,7 @@
 ---
 import Base from "@/layouts/Base.astro";
 import PostSingle from "@/layouts/PostSingle.astro";
-import { getSinglePage } from "@/lib/contentParser.astro";
+import { getSinglePage } from "@/libs/contentParser.astro";
 
 export async function getStaticPaths() {
   const BLOG_FOLDER = "blog";
