--- a/src/pages/blog/page/[slug].astro
+++ b/src/pages/blog/page/[slug].astro
@@ -3,9 +3,9 @@ import BlogCard from "@/components/BlogCard.astro";
 import Pagination from "@/components/Pagination.astro";
 import config from "@/config/config.json";
 import Base from "@/layouts/Base.astro";
-import { getSinglePage } from "@/lib/contentParser.astro";
-import { getAllTaxonomy, getTaxonomy } from "@/lib/taxonomyParser.astro";
-import { sortByDate } from "@/lib/utils/sortFunctions";
+import { getSinglePage } from "@/libs/contentParser.astro";
+import { getAllTaxonomy, getTaxonomy } from "@/libs/taxonomyParser.astro";
+import { sortByDate } from "@/libs/utils/sortFunctions";
 import PageHeader from "@/partials/PageHeader.astro";
 import PostSidebar from "@/partials/PostSidebar.astro";
 import { getEntry } from "astro:content";
