--- a/src/pages/categories/[category].astro
+++ b/src/pages/categories/[category].astro
@@ -1,9 +1,9 @@
 ---
 import BlogCard from "@/components/BlogCard.astro";
 import Base from "@/layouts/Base.astro";
-import { getSinglePage } from "@/lib/contentParser.astro";
-import { getTaxonomy } from "@/lib/taxonomyParser.astro";
-import taxonomyFilter from "@/lib/utils/taxonomyFilter";
+import { getSinglePage } from "@/libs/contentParser.astro";
+import { getTaxonomy } from "@/libs/taxonomyParser.astro";
+import taxonomyFilter from "@/libs/utils/taxonomyFilter";
 import PageHeader from "@/partials/PageHeader.astro";
 
 // get static paths for all categories
